# JHBR2

./: .gitignore  CMakeLists.txt  batch_eval.cpp  bitboard_optimization_techniques.md  checkpoint2onnx.py  convert_csa.py  convert_psv.py  generate_training_data.py  main.cc  onnx2tensorrt.sh  precompute.py  precompute_cshogi.py  precompute_psv.py  psv_dataset.py  psv_decode_c.c  psv_loader.py  shogi_mcts.py  shogi_model.py  shogi_model_v2.py  shogi_play.py  shogi_train.py  shogi_usi.py
lc0_mcts/: backend.h  book.cc  book.h  node.cc  node.h  search.cc  search.h  types.h
mate/: dfpn.cc  dfpn.h
mcts/: nn_eval.cc  nn_eval.h  nn_tensorrt.cc  nn_tensorrt.h  node.h  search.cc  search.h  search_async.h  search_mt.h
shogi_engine/: bitboard.cc  bitboard.h  board.cc  board.h  encoder.cc  encoder.h  types.h
test/: bench_cshogi.py  bench_movegen.cc  generate_positions.py  test_mate.cc  test_movegen.cc  test_replay.cc
usi/: usi_engine.cc  usi_engine.h
